// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InfoMessage > renders multiline info messages 1`] = `
"
  ERROR  Text string "ℹ " must be rendered inside <Text> component

 file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/reconciler.ts:220
 :10

 -createTextInsta
  ce             (file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/
                 reconciler.ts:220:10)
 -completeWor
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:9082:42)
 -runWithFiberIn
  EV            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:1738:13)
 -completeUnitOfW
  rk             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconcile
                 r/cjs/react-reconciler.development.js:12962:19)
 -performUnitOfW
  rk            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12843:11)
 -workLoopSyn
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:12644:41)
 -renderRootSy
  c           (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/c
              js/react-reconciler.development.js:12624:11)
 -performWorkOnR
  ot            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12135:44)
 -performSyncWorkOn
  oot              (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconci
                   ler/cjs/react-reconciler.development.js:2446:7)
 -flushSyncWorkAcrossRoo
  s_impl                (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-re
                        conciler/cjs/react-reconciler.development.js:2294:21)
"
`;

exports[`InfoMessage > renders with a custom icon 1`] = `
"
  ERROR  Text string "*" must be rendered inside <Text> component

 file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/reconciler.ts:220
 :10

 -createTextInsta
  ce             (file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/
                 reconciler.ts:220:10)
 -completeWor
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:9082:42)
 -runWithFiberIn
  EV            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:1738:13)
 -completeUnitOfW
  rk             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconcile
                 r/cjs/react-reconciler.development.js:12962:19)
 -performUnitOfW
  rk            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12843:11)
 -workLoopSyn
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:12644:41)
 -renderRootSy
  c           (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/c
              js/react-reconciler.development.js:12624:11)
 -performWorkOnR
  ot            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12135:44)
 -performSyncWorkOn
  oot              (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconci
                   ler/cjs/react-reconciler.development.js:2446:7)
 -flushSyncWorkAcrossRoo
  s_impl                (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-re
                        conciler/cjs/react-reconciler.development.js:2294:21)
"
`;

exports[`InfoMessage > renders with the correct default prefix and text 1`] = `
"
  ERROR  Text string "ℹ " must be rendered inside <Text> component

 file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/reconciler.ts:220
 :10

 -createTextInsta
  ce             (file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/
                 reconciler.ts:220:10)
 -completeWor
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:9082:42)
 -runWithFiberIn
  EV            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:1738:13)
 -completeUnitOfW
  rk             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconcile
                 r/cjs/react-reconciler.development.js:12962:19)
 -performUnitOfW
  rk            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12843:11)
 -workLoopSyn
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:12644:41)
 -renderRootSy
  c           (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/c
              js/react-reconciler.development.js:12624:11)
 -performWorkOnR
  ot            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12135:44)
 -performSyncWorkOn
  oot              (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconci
                   ler/cjs/react-reconciler.development.js:2446:7)
 -flushSyncWorkAcrossRoo
  s_impl                (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-re
                        conciler/cjs/react-reconciler.development.js:2294:21)
"
`;
